[gd_scene load_steps=7 format=3 uid="uid://p2ge3hubry2k"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/ImageInstruction.gd" id="1_bnfu6"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_oobfm"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_xbjwc"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_hgmnx"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_14up1"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_5ck5m"]

[node name="ImageInstruction" type="Panel"]
script = ExtResource("1_bnfu6")

[node name="BaseRow" parent="." instance=ExtResource("2_oobfm")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_xbjwc")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Draw"
script = ExtResource("4_hgmnx")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_14up1")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "Image       x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_5ck5m")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_5ck5m")]

[node name="Label3" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "image"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_5ck5m")]

[node name="Label4" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput4" parent="BaseRow/BaseLineColor" instance=ExtResource("6_5ck5m")]

[node name="Label5" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "rotation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput5" parent="BaseRow/BaseLineColor" instance=ExtResource("6_5ck5m")]
